--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,3 @@
 {
-  "version": 2,
-  "headers": [
-    {
-      "source": "/(.*\\.(html|htm))",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/html; charset=utf-8"
-        }
-      ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "/index.html"
-    }
-  ]
+  "version": 2
 }
